<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">计友</string>
    <string name="hello_world">Hello world!</string>
    <string name="txt_setting">设置</string>
    <string name="txt_setting_basic_info">基本信息</string>
    <string name="txt_setting_application_name">应用名称</string>
    <string name="txt_setting_application_name_value">计友</string>
    <string name="txt_setting_version_info">版本信息</string>
    <string name="txt_setting_version_info_value">1.0.0</string>
    <string name="txt_setting_version_code">版本代号</string>
    <string name="txt_setting_version_code_value">2015毕业特别版</string>
    <string name="txt_setting_network">网络</string>
    <string name="txt_setting_question">问题与反馈</string>
    <string name="txt_setting_question_value">邮箱：toy_king@163.com</string>
    <string name="txt_setting_update">检查更新</string>
    <string name="txt_setting_support_jifriend">支持计友</string>
    <string name="txt_setting_support_jifriend_value">各位豪们，应用商店点个赞吧！</string>
    <string name="txt_setting_about">关于</string>
    <string name="txt_setting_website">计友网站</string>
    <string name="txt_setting_website_value">www.jifriend.cn</string>
    <string name="txt_setting_product_comunication">产品交流</string>
    <string name="txt_setting_product_comunication_value">QQ群：168015920</string>
    <string name="txt_setting_donate">捐助开发者</string>
    <string name="txt_setting_donate_value">支付宝账号：1061747415@qq.com</string>
    <string name="txt_main_square">计友圈</string>
    <string name="txt_main_team">计友团队</string>
    <string name="txt_main_message">消息</string>
    <string name="txt_main_user">我</string>
    <string name="img_user">用户头像</string>
    <string name="txt_user_edit_profile">资料编辑</string>
    <string name="txt_user_private_setting">隐私设置</string>
    <string name="txt_user_tag">我的标签</string>
    <string name="txt_user_project">我发布的项目</string>
    <string name="txt_user_setting">设置</string>
    <string name="txt_user_jifriend">我的计友</string>
    <string name="txt_user_realname">真实姓名</string>
    <string name="txt_user_username">计友号：</string>
    <string name="txt_square_realname">真实姓名</string>
    <string name="txt_square_time">2015/04/17 11:07</string>
    <string name="txt_square_content">测试内容</string>
    <string name="txt_login_title">登录计友</string>
    <string name="edt_login_username_hint">用户名/学号/手机号</string>
    <string name="edt_login_password_hint">密码</string>
    <string name="btn_login_submit">登 陆</string>
    <string name="txt_register_title">注册账号</string>
    <string name="btn_register_submit">注 册</string>
    <string name="edt_register_phone_hint">手机号</string>
    <string name="edt_register_realname_hint">真实姓名</string>
    <string name="edt_register_password_hint">密码</string>
    <string name="edt_register_username_hint">用户名</string>
    <string name="txt_login_register">"注册 "</string>
    <string name="txt_square_add">发布信息</string>
    <string name="txt_square_add_status">发状态</string>
    <string name="txt_square_add_other_way">其它需求快速通道</string>
    <string name="txt_square_add_project">项目</string>
    <string name="txt_square_add_job">实习</string>
    <string name="txt_square_add_party">活动</string>
    <string name="square_add_status_content_hint">来说点和学习、工作、科创有关的吧~</string>
    <string name="txt_user_edit">完善个人信息</string>
    <string name="txt_user_edit_photo">头像</string>
    <string name="txt_user_edit_realname">真实姓名</string>
    <string name="edt_user_edit_realname_hint">待完善</string>
    <string name="txt_user_edit_sex">性别</string>
    <string name="edt_user_edit_sex_hint">待完善</string>
    <string name="txt_user_edit_company">公司</string>
    <string name="edt_user_edit_company_hint">完善公司名称</string>
    <string name="txt_user_edit_city">工作地区</string>
    <string name="edt_user_edit_city_hint">完善所在城市信息</string>
    <string name="txt_user_edit_address">详细地址</string>
    <string name="edt_user_edit_address_hint">完善公司地址信息</string>
    <string name="txt_user_edit_job">职位</string>
    <string name="edt_user_edit_job_hint">待完善</string>
    <string name="txt_user_edit_contact">联系方式</string>
    <string name="txt_user_edit_phone">手机号</string>
    <string name="edt_user_edit_phone_hint">待完善</string>
    <string name="txt_user_edit_email">邮箱</string>
    <string name="edt_user_edit_email_hint">待完善</string>
    <string name="txt_user_edit_qq">QQ</string>
    <string name="edt_user_edit_qq_hint">待完善</string>
    <string name="txt_user_edit_studentid">学号</string>
    <string name="edt_user_edit_studentid_hint">待完善</string>
    <string name="txt_message_title">消息</string>
    <string name="txt_team_title">计友团队</string>
    <string name="txt_team_project">做项目</string>
    <string name="txt_team_job">找实习</string>
    <string name="txt_team_party">看活动</string>
    <string name="txt_square_companyjob">| 东华大学在校本科生</string>
    <string name="txt_party_add_title">发起活动</string>
    <string name="txt_party_add_theme">主题</string>
    <string name="edt_party_add_theme_hint">活动的主题（最多15个字）</string>
    <string name="txt_party_add_time">时间</string>
    <string name="edt_square_add_time_hint">活动的具体时间</string>
    <string name="txt_party_add_address">地点</string>
    <string name="edt_party_add_address_hint">活动的具体地点</string>
    <string name="txt_party_add_peoplenum">活动人数</string>
    <string name="edt_party_add_peoplenum_hint">活动的大约人数</string>
    <string name="txt_party_add_description">活动内容描述</string>
    <string name="edt_party_add_description_hint">请详细描述活动的主题和内容来吸引更多的参与~</string>
    <string name="btn_party_add_submit">发布</string>
    <string name="title_activity_party">PartyActivity</string>
    <string name="txt_party_title">附近的活动</string>
    <string name="txt_party_item_theme">ACM思维演绎大赛</string>
    <string name="txt_party_item_time">2015&#8211;04&#8211;20 星期一  17:30</string>
    <string name="txt_party_item_address">上海市松江区人民北路2999号东华大学</string>
    <string name="txt_party_item_peoplenum">活动人数 1000 人</string>
    <string name="txt_party_item_person">王涛 | 东华大学本科生</string>
    <string name="txt_party_item_publish_time">04&#8211;12 17:23 发布</string>
    <string name="txt_square_city">上海松江</string>
    <string name="txt_square_prize">赞</string>
    <string name="txt_square_comment">评论</string>
    <string name="txt_user_exit">退出登陆</string>
    <string name="title_activity_party_detail">PartyDetailActivity</string>
    <string name="btn_party_detail_attend">我要报名</string>
    <string name="btn_party_detial_add">发起活动</string>
    <string name="txt_party_detail_theme">活动的标题</string>
    <string name="txt_party_detail_time_hint">时间：</string>
    <string name="txt_party_detail_time">2015年04月22日 21:59</string>
    <string name="txt_party_detail_address_hint">地点：</string>
    <string name="txt_party_detail_address">上海市松江区人民北路2999号</string>
    <string name="txt_party_detail_content_hint">内容：</string>
    <string name="txt_party_detail_content">申请条件： 1.我校在读本科生、研究生； 2.外语能力要求英语成绩良好； 3.能够且必须提供本人的真实资料，如有拒签记录等特殊情况需如实告知；4.身心健康，成绩优秀者优先考虑；</string>
    <string name="txt_party_detail_pulisher">发布人信息</string>
    <string name="txt_party_detail_party">活动具体信息</string>
    <string name="txt_party_detail_attend">报名信息</string>
    <string name="txt_party_detail_peoplenum_hint">人数：</string>
    <string name="txt_party_detail_peoplenum">20</string>
    <string name="txt_party_detail_title">活动详情</string>
    <string name="txt_party_attender_time">报名时间：2015/04/25 16:32</string>
    <string name="txt_party_attender_companyjob"> | 计友公司码农</string>
    <string name="txt_party_attender_realname">真实姓名</string>
    <string name="txt_party_detail_pulisher_realname">测试姓名</string>
    <string name="txt_party_detail_pulisher_companyjob">" | 公司职务（测试）"</string>
    <string name="txt_party_detail_pulisher_time">发布时间：2015/4/26 15:03</string>
    <string name="title_activity_job_add">JobAddActivity</string>
    <string name="txt_job_add_title">发布职位</string>
    <string name="txt_job_add_city">工作地点</string>
    <string name="edt_job_add_city_hint">填写所在的城市</string>
    <string name="txt_job_add_job">职位名称</string>
    <string name="edt_job_add_job">填写职位的名称</string>
    <string name="txt_job_add_company">用人公司</string>
    <string name="edt_job_add_company">填写公司的名称</string>
    <string name="txt_job_add_job_title">职位信息</string>
    <string name="txt_job_add_email">联系邮箱</string>
    <string name="edt_job_add_email_hint">填写HR的邮箱</string>
    <string name="txt_job_add_description">职位描述</string>
    <string name="txt_job_add_salary">工作薪资</string>
    <string name="edt_job_add_salary_hint">填写月薪</string>
    <string name="txt_job_add_requirement">职位要求</string>
    <string name="edt_job_add_requirement_hint">说点申请职位所需要具备的条件吧~</string>
    <string name="edt_job_add_description_hint">说点更详细的关于职位的描述来吸引更多的人~</string>
    <string name="btn_job_add_submit">发 布</string>
    <string name="title_activity_job">JobActivity</string>
    <string name="txt_job_title">实习</string>
    <string name="txt_job_item_job">Android软件工程师</string>
    <string name="txt_job_item_company">上海松江 东华大学 10k~20k/月</string>
    <string name="txt_job_item_pulisher">发布人：王涛 | 东华大学本科生</string>
    <string name="title_activity_job_detail">JobDetailActivity</string>
    <string name="txt_job_detail_title">职位详情</string>
    <string name="txt_job_detail_description_title">职位描述</string>
    <string name="txt_job_detail_description">对该职位的具体描述</string>
    <string name="txt_job_detail_requirement_title">职位要求</string>
    <string name="txt_job_detail_requirement">对该职位的具体要求</string>
    <string name="txt_job_detail_pulisher_realname">真实姓名</string>
    <string name="txt_job_detail_pulisher_companyjob">" | 公司名称职位名称"</string>
    <string name="txt_job_detail_pulisher_time">发布时间：2015/4/27 14:49</string>
    <string name="txt_job_detail_pulisher_email">简历邮箱：toy_king@163.com</string>

</resources>