<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:genius="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_skin"
    android:orientation="vertical" >

    <!-- 标题 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/color_title"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/layout_party_detail_back"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:background="@color/color_title"
            android:gravity="center" >

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/txt_party_detail_title"
                android:src="@drawable/icon_arrow_left_white" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_party_detail_title"
            android:textColor="@color/color_white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:background="@color/color_title"
            android:gravity="center" >
        </LinearLayout>
    </LinearLayout>

    <!-- 中间核心部分 -->

    <ScrollView
        android:id="@+id/layout_party_detail_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- 发布人信息 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/txt_party_detail_pulisher"
                android:textColor="#458B74"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_white"
                android:padding="10dp" >

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:contentDescription="@string/img_user"
                    android:src="@drawable/img_user" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical" >

                        <TextView
                            android:id="@+id/txt_party_detail_pulisher_realname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_party_detail_pulisher_realname"
                            android:textColor="@color/color_light_blue"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/txt_party_detail_pulisher_companyjob"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:text="@string/txt_party_detail_pulisher_companyjob"
                            android:textColor="@color/color_light_blue_light"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp" >

                        <TextView
                            android:id="@+id/txt_party_detail_pulisher_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_party_detail_pulisher_time"
                            android:textColor="@color/color_black"
                            android:textSize="13sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!-- 活动具体信息 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/txt_party_detail_party"
                android:textColor="#458B74"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_white"
                android:orientation="vertical"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/txt_party_detail_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/txt_party_detail_theme"
                    android:textColor="@color/color_light_blue"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_party_detail_time_hint"
                        android:textColor="@color/color_black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt_party_detail_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_party_detail_time"
                        android:textColor="@color/color_gray"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_party_detail_address_hint"
                        android:textColor="@color/color_black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt_party_detail_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_party_detail_address"
                        android:textColor="@color/color_gray"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_party_detail_peoplenum_hint"
                        android:textColor="@color/color_black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt_party_detail_peoplenum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_party_detail_peoplenum"
                        android:textColor="@color/color_gray"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_party_detail_content_hint"
                        android:textColor="@color/color_black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt_party_detail_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_party_detail_content"
                        android:textColor="@color/color_gray"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- 报名信息 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/txt_party_detail_attend"
                android:textColor="#458B74"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_white" >

                <com.toyking.jiyou.ListViewForScrollView
                    android:id="@+id/layout_party_attender_list"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </LinearLayout>

            <!-- 报名按钮 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp" >

                <net.qiujuer.genius.widget.GeniusButton
                    android:id="@+id/btn_party_detail_attend"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/btn_party_detail_attend"
                    android:textSize="15sp"
                    genius:g_cornerRadii_A="10dp"
                    genius:g_cornerRadii_B="10dp"
                    genius:g_cornerRadii_C="10dp"
                    genius:g_cornerRadii_D="10dp"
                    genius:g_textAppearance="none"
                    genius:g_theme="@array/ScubaBlue" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>